--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
         import { getFirestore, collection, addDoc, query, where, getDocs, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         const firebaseConfig = {
-  		apiKey: "AIzaSyCYPT-Lx_-HxYWf2PRQVAXYVG6W1V39DPs",
- 		authDomain: "toanthayhayd2bacninh001.firebaseapp.com",
-  		projectId: "toanthayhayd2bacninh001",
-  		storageBucket: "toanthayhayd2bacninh001.firebasestorage.app",
-  		messagingSenderId: "98805419075",
-  		appId: "1:98805419075:web:27921b2c753322f2c958f6",
-  		measurementId: "G-HG6KMHQESD"
+ 		 apiKey: "AIzaSyAwM9_H8PTooz3Nh4MPt9wdtBScIvMC318",
+ 		 authDomain: "toanthayha-cd96c.firebaseapp.com",
+  		projectId: "toanthayha-cd96c",
+  		storageBucket: "toanthayha-cd96c.firebasestorage.app",
+ 		 messagingSenderId: "940207284081",
+  		appId: "1:940207284081:web:9801158f72cc14053ae0d0",
+  		measurementId: "G-9D5ZQ66BSB"
 		};
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
