--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p id="examCodeDisplay" class="w-full text-center text-lg font-bold text-red-600 p-2 mt-1"></p>
             </div>
             <div class="mb-3">
-                <label class="block font-medium">Số báo danh (VD: 520112)</label>
+                <label class="block font-medium">Số báo danh (VD: 520112, chờ 5s nhé)</label>
                 <input type="text" id="studentId" class="w-full border rounded px-3 py-2 mt-1" required>
             </div>
             <div class="mb-3">
